# zcash-agent-toolkit

./: .gitignore  Cargo.toml  README.md  build.ps1  build.sh
crates/address-utils/: Cargo.toml
crates/address-utils/src/: classify.rs  lib.rs
crates/agent-protocol/: Cargo.toml
crates/agent-protocol/src/: handshake.rs  lib.rs  relay.rs  task.rs
crates/crypto-primitives/: Cargo.toml
crates/crypto-primitives/src/: blake3_utils.rs  cipher.rs  key_exchange.rs  lib.rs  random.rs  ratchet.rs  rotation.rs  zcash_keys.rs
crates/memo-codec/: Cargo.toml
crates/memo-codec/src/: chunk.rs  lib.rs  session.rs  types.rs
crates/wasm-bindings/: Cargo.toml
crates/wasm-bindings/src/: lib.rs
demo/: index.html
examples/: agent-handshake.ts  privacyclaw-demo.ts  task-bounty.ts
ts-sdk/: package-lock.json  package.json  tsconfig.json
ts-sdk/src/: address.ts  crypto.ts  hex.ts  index.ts  keys.ts  memo.ts  ratchet.ts  session.ts  task.ts  types.ts  wasm.ts
ts-sdk/tests/: crypto.test.ts  integration.test.ts  keys.test.ts  memo.test.ts  ratchet.test.ts  session.test.ts  task.test.ts
