[workspace]
resolver = "2"
members = [
    "crates/memo-codec",
    "crates/crypto-primitives",
    "crates/address-utils",
    "crates/agent-protocol",
    "crates/wasm-bindings",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
blake3 = "=1.8.3"
x25519-dalek = { version = "2", features = ["static_secrets"] }
chacha20poly1305 = "0.10"
getrandom = { version = "0.2", features = ["js"] }
rand_core = { version = "0.6", features = ["getrandom"] }
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
memo-codec = { path = "crates/memo-codec" }
crypto-primitives = { path = "crates/crypto-primitives" }
address-utils = { path = "crates/address-utils" }
agent-protocol = { path = "crates/agent-protocol" }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
