[package]
name = "crypto-primitives"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
blake3 = { workspace = true }
x25519-dalek = { workspace = true }
chacha20poly1305 = { workspace = true }
getrandom = { workspace = true }
rand_core = { workspace = true }
hex = { workspace = true }
zeroize = { version = "1", features = ["derive"] }
