[package]
name = "zcash-agent-toolkit-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
agent-protocol = { workspace = true }
memo-codec = { workspace = true }
crypto-primitives = { workspace = true }
address-utils = { workspace = true }
wasm-bindgen = { workspace = true }
serde-wasm-bindgen = { workspace = true }
js-sys = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
